cleanup client setup handler