@@ -1,12 +1,17 @@
 package com.github.elenterius.biomancy.init.client;
 
+import com.github.elenterius.biomancy.BiomancyMod;
 import com.github.elenterius.biomancy.init.ModBioForgeTabs;
+import com.github.elenterius.biomancy.init.ModRecipeBookTypes;
+import com.github.elenterius.biomancy.init.ModRecipes;
 import com.github.elenterius.biomancy.recipe.BioForgeRecipe;
 import com.github.elenterius.biomancy.world.inventory.menu.BioForgeTab;
-import com.google.common.collect.ImmutableList;
-
 import net.minecraft.client.RecipeBookCategories;
 import net.minecraft.world.item.crafting.Recipe;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.client.event.RegisterRecipeBookCategoriesEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.registries.RegistryObject;
 
 import java.util.HashMap;
@@ -14,7 +19,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 
-//@Mod.EventBusSubscriber(bus = Mod.EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
+@Mod.EventBusSubscriber(modid = BiomancyMod.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
 public final class ModRecipeBookCategories {
 
 	private static final Map<String, RecipeBookCategories> BIO_FORGE_TAB_TO_CATEGORY = new HashMap<>();
@@ -24,7 +29,7 @@ public final class ModRecipeBookCategories {
 	public static final RecipeBookCategories BLOCKS_CATEGORY = createRecipeBookCategories(ModBioForgeTabs.BLOCKS);
 	public static final RecipeBookCategories MACHINES_CATEGORY = createRecipeBookCategories(ModBioForgeTabs.MACHINES);
 	public static final RecipeBookCategories WEAPONS_CATEGORY = createRecipeBookCategories(ModBioForgeTabs.WEAPONS);
-	public static final List<RecipeBookCategories> BIOFORGE_CATEGORIES = ImmutableList.of(SEARCH_CATEGORY, MISC_CATEGORY, BLOCKS_CATEGORY, MACHINES_CATEGORY, WEAPONS_CATEGORY);
+	public static final List<RecipeBookCategories> BIO_FORGE_CATEGORIES = List.of(SEARCH_CATEGORY, MISC_CATEGORY, BLOCKS_CATEGORY, MACHINES_CATEGORY, WEAPONS_CATEGORY);
 	
 	public static final Function<Recipe<?>, RecipeBookCategories> BIO_FORGE_BOOK_CATEGORIES_FINDER = recipe -> {
 		if (recipe instanceof BioForgeRecipe bioForgeRecipe) {
@@ -44,6 +49,17 @@ public final class ModRecipeBookCategories {
 
 	public static RecipeBookCategories getRecipeBookCategories(BioForgeTab category) {
 		return BIO_FORGE_TAB_TO_CATEGORY.get(category.enumId());
+	}
+
+	@SubscribeEvent
+	public static void registerRecipeBooks(RegisterRecipeBookCategoriesEvent event) {
+		event.registerBookCategories(ModRecipeBookTypes.BIO_FORGE, ModRecipeBookCategories.BIO_FORGE_CATEGORIES);
+		event.registerAggregateCategory(ModRecipeBookCategories.SEARCH_CATEGORY, ModRecipeBookCategories.BIO_FORGE_CATEGORIES);
+		event.registerRecipeCategoryFinder(ModRecipes.BIO_FORGING_RECIPE_TYPE.get(), ModRecipeBookCategories.BIO_FORGE_BOOK_CATEGORIES_FINDER);
+
+		event.registerRecipeCategoryFinder(ModRecipes.BIO_BREWING_RECIPE_TYPE.get(), rc -> RecipeBookCategories.UNKNOWN);
+		event.registerRecipeCategoryFinder(ModRecipes.DECOMPOSING_RECIPE_TYPE.get(), rc -> RecipeBookCategories.UNKNOWN);
+		event.registerRecipeCategoryFinder(ModRecipes.DIGESTING_RECIPE_TYPE.get(), rc -> RecipeBookCategories.UNKNOWN);
 	}
 
 }
